--- a/FGM/FGM.csproj
+++ b/FGM/FGM.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Controllers\CompetitionController.cs" />
     <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MatchController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -1864,6 +1865,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Country\CountryList.cshtml" />
     <Content Include="Views\Competition\CompetitionList.cshtml" />
+    <Content Include="Views\Match\MatchEntry.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
