--- a/FGM_Model/FGM_Model.csproj
+++ b/FGM_Model/FGM_Model.csproj
@@ -44,6 +44,7 @@
     <Compile Include="BaseModel.cs" />
     <Compile Include="CompetitionModel.cs" />
     <Compile Include="CountryModel.cs" />
+    <Compile Include="MatchModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
