--- a/Bookie_BL/Bookie_BL.csproj
+++ b/Bookie_BL/Bookie_BL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ABD67284-F94A-4BFF-914D-E45A2B139E62}</ProjectGuid>
+    <ProjectGuid>{667A7DA6-ECBD-420A-83E9-068384F2783C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FGM_Model</RootNamespace>
-    <AssemblyName>FGM_Model</AssemblyName>
+    <RootNamespace>Bookie_BL</RootNamespace>
+    <AssemblyName>Bookie_BL</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,14 +41,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseModel.cs" />
-    <Compile Include="BookieModel.cs" />
-    <Compile Include="CompetitionModel.cs" />
-    <Compile Include="CountryModel.cs" />
-    <Compile Include="MatchModel.cs" />
+    <Compile Include="BookieBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserBalanceModel.cs" />
-    <Compile Include="UserModel.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonFunction\CommonFunction.csproj">
+      <Project>{c0c9d960-f3d6-4eb8-a603-ecf41efa1fda}</Project>
+      <Name>CommonFunction</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FGM_DL\FGM_DL.csproj">
+      <Project>{da6f6100-1758-4df2-8c49-320a4ecc404d}</Project>
+      <Name>FGM_DL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FGM_Model\FGM_Model.csproj">
+      <Project>{abd67284-f94a-4bff-914d-e45a2b139e62}</Project>
+      <Name>FGM_Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
