--- a/FGM/bin/FGM.dll.config
+++ b/FGM/bin/FGM.dll.config
@@ -51,8 +51,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-0P58Q7P\SQLEXPRESS;Initial Catalog=FGM;User ID=sa;Password=ssa12345!;" providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=DESKTOP-U5R86GV\SQL2017;Initial Catalog=FGM;User ID=sa;Password=12345;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=DESKTOP-0P58Q7P\SQLEXPRESS;Initial Catalog=FGM;User ID=sa;Password=ssa12345!;" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=3.133.30.8;Initial Catalog=FGM;User ID=sa;Password=admin12345!;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
