--- a/FGM/FGM.csproj
+++ b/FGM/FGM.csproj
@@ -1986,12 +1986,13 @@
     <Content Include="Views\UserBalance\UserTransitionEntry.cshtml" />
     <Content Include="Views\Match\MatchResultEntry.cshtml" />
     <Content Include="Views\Bookie\BookieConfirm.cshtml" />
+    <Content Include="Views\User\UserGamblingResult.cshtml" />
+    <Content Include="Views\User\UserGamblingResultDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Odds\" />
-    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
