--- a/FGM/FGM.csproj
+++ b/FGM/FGM.csproj
@@ -1991,11 +1991,11 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Odds\OddsEntry.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Odds\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
